--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto niver Namoro <3</title>
+    <title>Presentinho<3</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel= "icon" type="image/x-icon" href="faviconHeart.png">
 </head>
 <body>
     <div class="container">
@@ -21,7 +22,7 @@
             </div>
             <div class="coracao">
         </div>
-        <button class="button" type="button"> <a href="https://www.youtube.com/" >link</a></button>
+        <button class="button" type="button"> <a href="https://victorbfontes.github.io/projetoNiverNamo-Part2/" target="_blank" >link para outra parte rs</a></button>
     </div>
         
     <script>
